grammar.ebnf
<program> ::= <statement>+
<statement> ::= <command> | <loop>
<command> ::= ("MOVE" | "TURN") <expression> | "COLOR" <hex_color>
<loop> ::= "REPEAT" <number> "[" <program> "]"
<expression> ::= <term> (("+" | "-") <term>)*
<term> ::= <factor> (("*" | "/") <factor>)*
<factor> ::= <number> | "(" <expression> ")"

// Lexical Tokens
<number> ::= [0-9]+
<hex_color> ::= "#" [0-9a-fA-F]{6}
<whitespace> ::= [ \t\n\r]+ // Ignored in parsing
